--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "chai": "^4.3.8",
     "lodash": "^4.17.21",
     "mocha": "^10.3.0",
     "ts-mocha": "^10.0.0",
@@ -17,6 +18,8 @@
     "typescript": "^5.4.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
+    "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.26"
   }
