--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
         "target": "ES2016",
         "module": "commonJS",
         "esModuleInterop": true,
-        "strict": true
-    }
+        "strict": true,
+    },
+    "include": [
+        "./**/*.ts"
+    ]
 }
